--- a/disc-profiles/src/App.css
+++ b/disc-profiles/src/App.css
@@ -3,7 +3,8 @@
 }
 
 .App-logo {
-  
+  height: 120;
+  width: 120;
   
 }
 
@@ -12,15 +13,26 @@
   justify-content: center;
   align-content: stretch;
   background-color: #888A8D;
+  font-family: 'Open Sans Extra Bold', sans-serif;
   padding: 20px;
   color: white;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .Nav-Menu {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-content: center;
-  style-type: none;
+  align-items: center;
+  list-style: none;
+  background-color: none;
+  margin: 0;
+  padding: 0;
+  color: #605F5E;
+  font-family: 'Open Sans Extra Bold', sans-serif;
+  font-weight: bold;
+  height: 3em;
 }
 
 .App-title {
@@ -29,4 +41,10 @@
 
 .App-intro {
   font-size: large;
+}
+
+.header {
+  font-family: 'Open Sans Extra Bold', sans-serif;
+  font-weight: bold;
+  
 }
