--- a/disc-profiles/src/index.css
+++ b/disc-profiles/src/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  margin: 2em;
+  padding: 2em;
+  font-family: 'PT Sans', sans-serif;
+  text-align: left;
 }
